feat(subscription_plan.rb): Cria plano de assinatura e associa com assinatura + testes
